test/corpus/num-in-xml-tag.txt
===
Test : Numbers in tag names should not break parser
===

<?xml version="1.0" encoding="utf-8"?>
<viewpager2.widget.ViewPager2
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"/>

---

(xml_file
  (xml_decl
    (xml_version
      (eq)
      (xml_version_value))
    (xml_encoding
      (eq)
      (xml_encoding_value)))
  (element
    (empty_element
      tag_name: (name)
      (attribute
        (ns_decl
          xmlns_prefix: (name)
          (eq)
          (attr_value)))
      (attribute
        (xml_attr
          ns_prefix: (name)
          attr_name: (name)
          (eq)
          (attr_value)))
      (attribute
        (xml_attr
          ns_prefix: (name)
          attr_name: (name)
          (eq)
          (attr_value))))))